# fast-api

./: pyproject.toml
todo/: main.py  model.py
